Updating project to java 14